<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_icon"

            android:title="@string/schedules" />
        <item
            android:id="@+id/nav_kids"
            android:icon="@drawable/ic_kids_icon"
            android:title="@string/kids" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_icon"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/settings" />
    </group>

</menu>